# swxsoc_reach

./: .gitignore  AUTHORS.rst  CHANGELOG.rst  CITATION.rst  README.rst  pyproject.toml  region_contour_paths.json  test2.py
.devcontainer/: devcontainer.json
.github/workflows/: calibration.yml  test_in_container.yml  testing.yml
docs/: Makefile  about.rst  api.rst  conf.py  index.rst
docs/_templates/: layout.html
docs/dev-guide/: code_standards.rst  dev_env.rst  docs.rst  maintainer_workflow.rst  tests.rst
docs/user-guide/: constellation.rst  customization.rst  data_objects.rst  geom.rst  historical-download.rst  historical-process.rst  index.rst  overview.rst  udl_download.rst
swxsoc_reach/: __init__.py  __main__.py
swxsoc_reach/calibration/: calibration.py  transform.py
swxsoc_reach/data/: reach_default_global_cdf_attrs_schema.yaml  reach_default_variable_cdf_attrs_schema.yaml  (+2 more)
swxsoc_reach/ops_reach-main/: CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
swxsoc_reach/ops_reach-main/ops_reach/: __init__.py
swxsoc_reach/ops_reach-main/ops_reach/REACH_SwX_Product_processing/: UDL_10min_maps.sh  UDL_15min_REACH_indices.sh  UDL_REACH_indices.py  UDL_REACH_indicies.py  UDL_daysend_REACH_indices.sh  binned_region.py  cron_UDL_10min_region_Lplots_and_maps.py  cron_UDL_15min_append_RI.py  cron_UDL_append_RI.py  cron_UDL_make_RI.py  cron_UDL_update_all.py  redo_UDL_append_RI.py
swxsoc_reach/ops_reach-main/ops_reach/instruments/: __init__.py  aero_reach.py
swxsoc_reach/ops_reach-main/ops_reach/instruments/methods/: __init__.py  pod_serial_numbers.csv  reach.py
swxsoc_reach/ops_reach-main/ops_reach/tests/: __init__.py  test_instruments.py
swxsoc_reach/ops_reach-main/scripts/: check_files.py  netcdf_gen.py
(+48 files in other folders)
